--- a/TOOLS/CSS_/CSS_.css
+++ b/TOOLS/CSS_/CSS_.css
@@ -29,135 +29,322 @@ h3{font-family: Helvetica, sans-serif;}
     text-align: left|right|center|justify|initial|inherit;
 
 
- ШРИФТ ОТ ФАЙЛОВЕТЕ */
-@font-face {
-    font-family: TiltNeon;
-    src: url(elements/TiltNeon.ttf)
-}
-h1{
-    font-family: TiltNeon;
-    font-size: 1.5em;
-}
+    ШРИФТ ОТ ФАЙЛОВЕТЕ */
+    @font-face {
+        font-family: TiltNeon;
+        src: url(elements/TiltNeon.ttf)
+    }
+    h1{
+        font-family: TiltNeon;
+        font-size: 1.5em;
+    }
 
 
 /* 
 03. BORDERS - РАМКИ */
-#border{
-    /* border-style: dashed; */
-    /* border-style: dotted; */
-    /* border-style: double; */
-    /* border-style: groove; */
-    /* border-style: ridge; */
-    /* border-style: outset; */
-    /* border-style: inset; */
+    #border{
+        /* border-style: dashed; */
+        /* border-style: dotted; */
+        /* border-style: double; */
+        /* border-style: groove; */
+        /* border-style: ridge; */
+        /* border-style: outset; */
+        /* border-style: inset; */
 
-    border-bottom: solid 5px rgb(190, 149, 13);
-    border-top: solid 5px rgb(190, 48, 13);
-    border-radius: 10px;
-}
+        border-bottom: solid 5px rgb(190, 149, 13);
+        border-top: solid 5px rgb(190, 48, 13);
+        border-radius: 10px;
+    }
 
 
 /* 
 04. SHADOW   - hor ofset, vert ofset, blur, color*/
-#shadow{
-    font-family: TiltNeon;
-    text-shadow: 3px 3px 5px rgb(248, 13, 13), -3px -3px 5px rgb(25, 128, 255);
-}
+    #shadow{
+        font-family: TiltNeon;
+        text-shadow: 3px 3px 5px rgb(248, 13, 13), -3px -3px 5px rgb(25, 128, 255);
+    }
 
-#boxShadow {
-    width: 150px;
-    height: 50px;
-    background-color: rgb(215, 215, 215);
-    box-shadow: 3px 3px 5px tomato;
-}
+    #boxShadow {
+        width: 150px;
+        height: 50px;
+        background-color: rgb(215, 215, 215);
+        box-shadow: 3px 3px 5px tomato;
+    }
 
 
 /* 
 05. MARGINES */
-.boxMargin{
-    border: 3px solid grey;
-    background-color: rgb(231, 51, 51);
-    margin-left: auto;      /* залепва за десния край на браузъра */
-    margin: 30px;
-    padding: 20px;          /* разстоянието отвътре на рамката*/   
-}
+    .boxMargin{
+        border: 3px solid grey;
+        background-color: rgb(231, 51, 51);
+        margin-left: auto;      /* залепва за десния край на браузъра */
+        margin: 30px;
+        padding: 20px;          /* разстоянието отвътре на рамката*/   
+    }
 
 
 /* 
 06. FLOAT IMAGE IN TEXT */
-#floatDiv{
-    border: 1px solid gray;
-    margin: 10px; 
-    display: flow-root; /* спира картинките да не излизат извън рамката */
-    width: 350px;
-}
+    #floatDiv{
+        border: 1px solid gray;
+        margin: 10px; 
+        display: flow-root; /* спира картинките да не излизат извън рамката */
+        width: 350px;
+    }
 
-#floatImg{
-    float: left;
-    margin: 10px;
-}
+    #floatImg{
+        float: left;
+        margin: 10px;
+    }
 
 
 /* 
 07. OVERFLOW - когато нещата излизат извън рамката */
-#overflow{
-    border: 2px solid;
-    height: 75px;
-    overflow: visible;          /* елементитее са видими*/
-    overflow: hidden;           /* елементите са скрити, но може да достигнем текста */
-    overflow: clip;
-    overflow-clip-margin: 15px; /* oказва с колко да излезне от кутията */
-    overflow: scroll;           /* scrollbar винаги */
-    overflow: auto;             /* scrollbar при нужда */
-    min-height: 10vh;           /* min 10% от viewport height */
-}
+    #overflow{
+        border: 2px solid;
+        height: 75px;
+        overflow: visible;          /* елементитее са видими*/
+        overflow: hidden;           /* елементите са скрити, но може да достигнем текста */
+        overflow: clip;
+        overflow-clip-margin: 15px; /* oказва с колко да излезне от кутията */
+        overflow: scroll;           /* scrollbar винаги */
+        overflow: auto;             /* scrollbar при нужда */
+        min-height: 10vh;           /* min 10% от viewport height */
+    }
 
 
 
 /* 
 08. DISPLAY - определя как се показва елемент */
-#divDisplay{                        /* работи като блок елемент */
-    background-color: tomato;
-    /* display: inline;    сега ще рабори като inline */
-}
-#spanDisplay{
-    background-color: plum;
-    /* display: block;          ще работи като блок */
-    /* display: none;           елемента не съществува и не заема място */
-    /* visibility: hidden;      скрива елемента, но заема*/
-}
+    #divDisplay{                        /* работи като блок елемент */
+        background-color: tomato;
+        /* display: inline;    сега ще рабори като inline */
+    }
+    #spanDisplay{
+        background-color: plum;
+        /* display: block;          ще работи като блок */
+        /* display: none;           елемента не съществува и не заема място */
+        /* visibility: hidden;      скрива елемента, но заема*/
+    }
 
 
 /* 
 09. POSITION */
-#relative{
-    width: 100px;
-    height: 100px;
-    background-color: goldenrod;
-        position: relative;     /* където е по default */
-        top: 10px;              /* има 10px над def място */ 
-        left: 150px;            /* избутан е с 150px отляво */
+    #relative{
+        width: 100px;
+        height: 100px;
+        background-color: goldenrod;
+            position: relative;     /* където е по default */
+            top: 10px;              /* има 10px над def място */ 
+            left: 150px;            /* избутан е с 150px отляво */
 
-        /* position: fixed;        остава на същото място при скролване */
+            /* position: fixed;        остава на същото място при скролване */
+        }
+
+    #absolute{
+        width: 50px;
+        height: 50px;
+        background-color: rgb(177, 112, 212);
+            position: relative;     
+            top: 25px;            
+            left: 25px;             
+            position: absolute;     /* на разстояние от друг елемент в контейнера */
+        }
+
+
+    body{
+        /* background-image: url(elements/background.jpg); */
+        background-repeat: no-repeat;   /* да не се повтаря */
+        background-position: center;
+        background-attachment: fixed;   /* при скролване не се мести */
+        background-size: cover;         /* покрива целия фон */
     }
 
-#absolute{
-    width: 50px;
-    height: 50px;
-    background-color: rgb(177, 112, 212);
-        position: relative;     
-        top: 25px;            
-        left: 25px;             
-        position: absolute;     /* на разстояние от друг елемент в контейнера */
+
+/* 
+11. COMBINATORS */
+    #childComb{border: 2px solid;}
+
+    /* DESCENDENT - елементи и вложени елементи в контейнера */
+    #childComb p{
+        background-color: yellowgreen;
+    }
+
+    /* CHILD - всички деца в контейнера */
+    #childComb > p{
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+    }
+
+    /* GENERAL SIBLINGS - всички братя и сестри на това ID в общото (извън контейнерите) */
+    /* #childComb ~ p{
+        background-color: rgb(232, 91, 91);
+    } */
+
+    /* ADJACENT SIBLINGS - първият директен братя/сестри на това ID в общото (извън контейнерите) */
+    #childComb + p{
+        background-color: rgb(135, 95, 51);
     }
 
 
-body{
-    /* background-image: url(elements/background.jpg); */
-    background-repeat: no-repeat;   /* да не се повтаря */
-    background-position: center;
-    background-attachment: fixed;   /* при скролване не се мести */
-    background-size: cover;         /* покрива целия фон */
-}
+/* 
+12. PSEUDO CLASSES - описанията ще се предадат на следващите псудо класове */
+    /* BUTTON */
+        #pseudo button:hover{
+            font-size: 1.1em;
+            background-color: aqua;
+            border-radius: 0.8em;
+        }
+        #pseudo button:active{
+            background-color: rgb(255, 225, 0);
+        } 
 
 
+    /* LINK */
+        #pseudoLink a:link{
+            color: rgb(83, 83, 240);
+        }
+        #pseudoLink a:hover{
+            color: rgb(13, 13, 247);
+            font-size: 1.1em;
+        }
+        #pseudoLink a:active{
+            color: rgb(240, 83, 143);
+            font-size: 1.2em;
+        }
+        /* #pseudoLink a:visited{
+            color: rgb(119, 119, 119);
+        } */
+
+
+    /* UNORDERED LIST */
+        #pseudoUl1 li:hover{
+            background-color: rgb(247, 247, 73);
+        }
+        #pseudoUl1 li:not(:hover){
+            background-color: rgb(247, 163, 73);
+        }
+
+        #pseudoUl2 li:nth-child(6){
+            background-color: rgb(247, 163, 73);
+        }
+
+        #pseudoUl2 li:nth-child(odd){
+            color: brown;
+        }
+
+    /* CONTAINER */
+        #greetings p{
+            background-color: rgb(165, 198, 255);
+            padding: 10px;
+            display: none;
+        }
+        #greetings:hover p{
+            display: block;
+        }
+
+
+
+
+/* 
+13. PSEUDO ELEMENT 
+първа буква */
+    #pElement h3::first-letter{
+        font-size: 2em;
+        font-style: italic;
+        background-color: aquamarine;
+    }
+
+    /* първа линия */
+    #pElement p::first-line{
+        background-color: rgb(244, 208, 154);
+    }
+
+    /* селектиран текст */
+    #pElement p::selection{                 
+        color: rgba(0, 255, 0, 0.916);
+        background-color: rgb(106, 106, 106);
+    }
+
+    /* before after psudo eelement */
+    #fruits li::marker{
+        content: "✔";
+        color: green;
+        font-size: 1.2em;
+    }
+    #apple::after{
+        content: "🍎";
+    }
+    #orange::after{
+        content: "🍊";
+    }
+    #banana::after{
+        content: "🍌";
+    }
+
+
+/* 
+14. PAGINATION */
+    .pagination{
+        text-align: center;
+    }
+    .pagination a{
+        color: black;
+        text-decoration: none;  /* маха подчертавката на линка */
+        padding: 8px 15px;
+        display: inline-block;
+    }
+    .pagination a.active{
+        background-color: greenyellow;
+        font-weight: bold;
+        border-radius: 6px;
+    }
+    .pagination a:hover:not(.active){
+        background-color: rgb(211, 239, 169);
+        border-radius: 6px;
+    }
+
+
+
+/* 
+15. DROPDOWN */
+    .dropdown{
+        display: inline-block;
+    }
+    .dropdown button{
+        background-color: hsl(0, 0%, 80%);
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        cursor: pointer;
+    }
+    .dropdown a{
+        display: block;
+        color: black;
+        text-decoration: none;
+        padding: 10px 15px;
+    }
+    .dropdown .content{
+        display: none;
+        position: absolute;
+        background-color: hsl(0, 0%, 95%);
+        min-width: 100px;
+        box-shadow: 2px 2px 5px hsl(0, 0%, 67%);
+    }
+    .dropdown:hover .content{
+        display: block;
+    }
+    .dropdown:hover button{
+        background-color: hsla(0, 0%, 60%);
+    }
+    .dropdown a:hover{
+        background-color: hsl(0, 0%, 90%);
+    }
+
+
+
+/* 
+16. NAVBAR */
+    .navbar ul{
+        list-style-type: none;
+    } 3:02
