--- a/TOOLS/NEXT.js/next-tool/app/globals.css
+++ b/TOOLS/NEXT.js/next-tool/app/globals.css
@@ -1,3 +1,8 @@
+/* Тук се вписват всички стилове, Tailwind линкове 
+Страницат в React и Next се рендерират на сървъра, а не на клиента. Това помага за няколко неща
+Може да сменим и да рендваме на клиента чреа "use client"
+*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
