finishing weather app

--- a/TOOLS/CSS_/CSS_.css
+++ b/TOOLS/CSS_/CSS_.css
@@ -4,9 +4,9 @@
 
 /* ЗАНУЛЯВАНЕ НА ВСИЧКИ МАРДЖИНИ И ПАДИНГИ */
 * {
-  padding: 0;
+  /* padding: 0;
   margin: 0;
-  box-sizing: border-box;   /* вади падинга от размера на бокса */
+  box-sizing: border-box;   вади падинга от размера на бокса */
 }
 
 h1, h2, h3, h4, p {
