--- a/portfolio_site_2/templates/base.html
+++ b/portfolio_site_2/templates/base.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/static/style.css" />
-    <title>{% block title %}Homepage{% endblock %}</title>
+    <title>{% block title %}Home{% endblock %}</title>
   </head>
 
-  <body>
-    <nav class="navbar">
-      <a href="{{ url_for('home') }}" class="active">about</a>
-      <a href="{{ url_for('projects') }}">projects</a>
-      <a href="experience.html">experience</a>
-      <a href="contacts.html">contacts</a>
-    </nav>
+  <nav class="navbar">
+    <a href="{{ url_for('home') }}" class="{{ 'active' if page == 'home' else '' }}" >about</a>
+    <a href="{{ url_for('projects') }}" class="{{ 'active' if page == 'projects' else '' }}">projects</a>
+    <a href="{{ url_for('experience') }}" class="{{ 'active' if page == 'experience' else '' }}">experience</a>
+    <a href="{{ url_for('contacts') }}" class="{{ 'active' if page == 'contacts' else '' }}">contacts</a>
+  </nav>
 
-    {% block content %} {% endblock %}
+  <body>
+    {% block content %}{% endblock %}
+
+    <script
+      src="https://kit.fontawesome.com/f2f63fec08.js"
+      crossorigin="anonymous"
+    ></script>
 
     <footer>v2.0</footer>
   </body>
