--- a/portfolio_site_2/templates/projects.html
+++ b/portfolio_site_2/templates/projects.html
@@ -1,65 +1,47 @@
-{% extends "base.html" %} 
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
-    <header>
-      <h1>PROJECTS</h1>
-    </header>
+<header>
+  <h1>PROJECTS</h1>
+</header>
 
-    <main>
-      <ul class="skill-list">
-        {% for tech, details in technologies.items() %}
-          <li class="skill">
-            <div class="skill-name">{{ tech }}</div>
-              <ul class="skill-description">
-                {% for detail in details %}
-                  <li>{{ detail }}</li>
-                {% endfor %}
-              </ul>
-          </li>
-        {% endfor %}
-      </ul>
+<main>
+  <div>
+    <span>filter by:</span>
+    {% for current_tech in used_tech %}
+    <form method="POST" action="/filter/{{ current_tech }}">
+      <button type="submit">{{ current_tech }}</button>
+    </form>
+    {% endfor %}
+  </div>
 
-      <div class="section-container">
+  <p>result for: {{ tag }}</p>
 
-        <div class="title-with-date">
-          {% for project in projects %}
-          <h3>{{ project["name"]}}</h3>
-          <div class="date">
-            {% _, month, year = project['start date'].split('-') %}
-            {% endfor %}
-            <time datetime="{{ project['start date']}}">{{ month }}-{{ year}}</time>
-            -
-            {% _, month, year = project['end date'].split("-") %}
-            {% endfor %}
-            <time datetime="{{ project['end date']}}">{{ month }}-{{ year}}</time>
-          </div>
-        </div>
-
-        <p>{{ project['description']}}</p>
-        <ul class="ul-bullet">
-          <li>technologies: {{ project['technologies'] }}.</li>
-          <li>
-            <a
-              target="_blank"
-              href="{{ project['source code']}}"
-              >source code</a
-            ><i class="fa-brands fa-github"> </i>
-          </li>
-        </ul>
+  {% for project in data %}
+  <div class="section-container">
+    <div class="title-with-date">
+      <h3>{{ project["name"]}}</h3>
+      <div class="date">
+        <time datetime="{{ project['start date']}}"
+          >{{ project['start month']}}/{{ project['start year'] }}</time
+        >
+        -
+        <time datetime="{{ project['end date']}}"
+          >{{ project['end month']}}/{{ project['end year'] }}</time
+        >
       </div>
- 
+    </div>
 
+    <p>{{ project['description']}}</p>
+    <ul class="ul-bullet">
+      <li>technologies: {{ project['technologies'] }}.</li>
+      <li>
+        <a target="_blank" href="{{ project['source code'] }}">source code</a
+        ><i class="fa-brands fa-github"> </i>
+      </li>
+    </ul>
+  </div>
+  {% endfor %}
+</main>
 
-
-    </main>
-    {% endblock %}
-
-    <footer>
-      <p>v1.1</p>
-    </footer>
-  </body>
-  <script
-    src="https://kit.fontawesome.com/f2f63fec08.js"
-    crossorigin="anonymous"
-  ></script>
-</html>
+<script src="../static/script.js"></script>
+{% endblock %}
