--- a/portfolio_website_2.0/templates/base.html
+++ b/portfolio_website_2.0/templates/base.html
@@ -2,15 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/static/style.css" />
+    <link href="/static/output.css" rel="stylesheet" />
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
-  <nav class="navbar">
-    <a href="{{ url_for('home') }}" class="{{ 'active' if page == 'home' else '' }}" >about</a>
-    <a href="{{ url_for('projects') }}" class="{{ 'active' if page == 'projects' else '' }}">projects</a>
-    <a href="{{ url_for('experience') }}" class="{{ 'active' if page == 'experience' else '' }}">experience</a>
-    <a href="{{ url_for('contacts') }}" class="{{ 'active' if page == 'contacts' else '' }}">contacts</a>
+  <nav class="bg-slate-100">
+    <a
+      href="{{ url_for('home') }}"
+      class="{{ 'active' if page == 'home' else '' }}"
+      >about</a
+    >
+    <a
+      href="{{ url_for('projects') }}"
+      class="{{ 'active' if page == 'projects' else '' }}"
+      >projects</a
+    >
+    <a
+      href="{{ url_for('experience') }}"
+      class="{{ 'active' if page == 'experience' else '' }}"
+      >experience</a
+    >
+    <a
+      href="{{ url_for('contacts') }}"
+      class="{{ 'active' if page == 'contacts' else '' }}"
+      >contacts</a
+    >
   </nav>
 
   <body>
