--- a/TOOLS/NEXT.js/next-tool/app/globals.css
+++ b/TOOLS/NEXT.js/next-tool/app/globals.css
@@ -1,6 +1,6 @@
 /* Тук се вписват всички стилове, Tailwind линкове 
-Страницат в React и Next се рендерират на сървъра, а не на клиента. Това помага за няколко неща
-Може да сменим и да рендваме на клиента чреа "use client"
+Страницата в React и Next се рендерират на сървъра, а не на клиента. Това помага за няколко неща
+Може да сменим и да рендваме на клиента чрез "use client"
 */
 
 @tailwind base;
